Fixing the issue with the horizontal scroll bar in the desig view

--- a/modules/web/css/ballerina-file-editor.css
+++ b/modules/web/css/ballerina-file-editor.css
@@ -35,7 +35,7 @@
 
 .wrapperDiv{
     height: 100vh;
-    padding-bottom: 121px;
+    padding-bottom: 123px;
 }
 
 .canvas-top-controls-container{
